# inference_verification

./: hook_test.ipynb  prefix_analysis.py  pyproject.toml  tokenizer_test.ipynb
inference_verification/: data_utils.py  gen_activations_prefix.py  gen_activations_quantize.py
