[project]
name = "inference_verification"
version = "0.0.1"
description = "Sample repository using Apollo best engineering practices"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic",
    "wandb",
    "tqdm",
    "pytest",
    "ipykernel",
    "pandas",
    "einops",
    "jaxtyping",
    "accelerate>=1.0.1",
    "datasets>=3.1.0",
    "huggingface-hub>=0.29.3",
    "matplotlib>=3.9.4",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "setuptools>=75.3.2",
    "wheel>=0.45.1",
    "torch",
    "transformers",
    "xformers",
    "vllm>=0.7,<0.9",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inference_verification"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["inference_verification", "tests"]
